--- a/templates/gym/base.html
+++ b/templates/gym/base.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    { % include './header.html' % }
-    
+   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
     <title>{% block title %}Gym{% endblock title %}</title>
-    
+    {% block headerContent %}
+{% include './header.html' %}
+{% endblock headerContent %}
     {% block headStyles %}{% endblock headStyles %}
     
     {% block headStaticContent %}
@@ -19,14 +22,17 @@
 <body>
     <!-- { % include './header.html' % } -->
 <!-- BODY -->
-    {% block headerContent %}{% endblock headerContent %}
+
     <main>
         {% block contenido %}{% endblock contenido %}
     </main>
-    {% block footerContent %}{% endblock footerContent %}
-    <!-- { % include './footer.html' % } -->
+    
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
-    { % include './footer.html' % }
+    
+    {% block footerContent %}
+    {% include './footer.html' %}
+    {% endblock footerContent %}
 </body>
 </html>
