--- a/templates/gym/base.html
+++ b/templates/gym/base.html
@@ -8,9 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
     <title>{% block title %}Gym{% endblock title %}</title>
-    {% block headerContent %}
-{% include './header.html' %}
-{% endblock headerContent %}
+
     {% block headStyles %}{% endblock headStyles %}
     
     {% block headStaticContent %}
@@ -20,7 +18,8 @@
 
 
 <body>
-    <!-- { % include './header.html' % } -->
+
+    {% block headerContent %}{% endblock headerContent %}
 <!-- BODY -->
 
     <main>
@@ -32,7 +31,7 @@
 
     
     {% block footerContent %}
-    {% include './footer.html' %}
+        {% include './footer.html' %}
     {% endblock footerContent %}
 </body>
 </html>
