--- a/templates/gym/header.html
+++ b/templates/gym/header.html
@@ -1,44 +1,36 @@
-<<<<<<< HEAD
-=======
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
-
->>>>>>> main
-<div class="container">
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-      <div class="col-md-3 mb-2 mb-md-0">
-        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-          <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
-        </a>
-      </div>
-
-      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-<<<<<<< HEAD
-        <li><a href= "#" class="nav-link px-2 link-secondary">Home</a></li> 
-        <li><a href="#" class="nav-link px-2">Actividades</a></li>
-        <li><a href="#" class="nav-link px-2">Conocenos</a></li>
-        <li><a href="#" class="nav-link px-2">Contacto</a></li>
-=======
-        <li><a href="{% url 'home' %}" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="#" class="nav-link px-2">Features</a></li>
-        <li><a href="#" class="nav-link px-2">Pricing</a></li>
-        <li><a href="#" class="nav-link px-2">FAQs</a></li>
-        <li><a href="{% url 'contacto' %}" class="nav-link px-2">Contacto</a></li>
->>>>>>> main
-      </ul>
-
-
-      <div class="col-md-3 text-end">
-<<<<<<< HEAD
+<header >
+  <nav class="navbar navbar-expand-md fixed-top bg-white">
+    <div class="container-fluid">
+      
+      <a class="navbar-brand d-flex flex-column" href="{% url 'home' %}">
+        {% load static %}
+        <img src="{% static '/img/powerfullGymLogo-RedAndBlack-Full.png'%}" height="40px" width="auto" alt="Logo de Powerful Team">
+      </a>
+      
+      
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0 mx-auto">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Actividades</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Conocenos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href= "{% url 'contacto' %}" tabindex="-1" aria-disabled="true">Contacto</a>
+          </li>
+        </ul>
         <button type="button" class="btn btn-outline-primary me-2">Registrarse</button>
         <button type="button" class="btn btn-primary">Iniciar sesión</button>
-=======
-        <button type="button" class="btn btn-outline-primary me-2">Login</button>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-          Sumarse!
-        </button>
->>>>>>> main
+
       </div>
-    </header>
-  </div>
+    </div>
+  </nav>
+</header>
