Se actualiza formulario de registro

--- a/templates/gym/sing_up.html
+++ b/templates/gym/sing_up.html
@@ -6,9 +6,9 @@
 
 
 <!-- Button trigger modal -->
-{% comment %} <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+ <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
   Sumarse!
-</button> {% endcomment %}
+</button> 
 
 <!-- Modal -->
 <div class="modal-dialog modal-dialog-centered">
@@ -24,14 +24,14 @@
           <form class="row g-3 needs-validation" id="singup" novalidate>
               <div class="col-md-4">
                 <label for="validationCustom01" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="validationCustom01" value="Juan" required>
+                <input type="text" class="form-control" id="validationCustom01"  required>
                 <div class="valid-feedback">
                   Correcto!
                 </div>
               </div>
               <div class="col-md-4">
                 <label for="validationCustom02" class="form-label">Apellido</label>
-                <input type="text" class="form-control" id="validationCustom02" value="Perez" required>
+                <input type="text" class="form-control" id="validationCustom02"  required>
                 <div class="valid-feedback">
                   Correcto!
                 </div>
@@ -50,7 +50,7 @@
                 <label for="validationCustom03" class="form-label">DNI</label>
                 <input type="number" class="form-control" id="validationCustom03" maxlength="8" required>
                 <div class="invalid-feedback">
-                  Por favor, escriba una ciudad válida
+                  Por favor, escriba un número de DNI válido
                 </div>
               </div>
               <div class="col-md-3">
