eliminar footer del base

--- a/templates/gym/base.html
+++ b/templates/gym/base.html
@@ -40,7 +40,7 @@
 
     
     {% block footerContent %}
-        {% include './footer.html' %}
+        <!-- {% include './footer.html' %} -->
     {% endblock footerContent %}
 </body>
 </html>
