se agrega link de archivo css

--- a/templates/gym/header.html
+++ b/templates/gym/header.html
@@ -1,10 +1,12 @@
 
 <header >
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'gym/css/navbar.css' %}"> 
   <nav class="navbar navbar-expand-md fixed-top bg-white">
     <div class="container-fluid">
       
       <a class="navbar-brand d-flex flex-column" href="{% url 'home' %}">
-        {% load static %}
+        
         <img src="{% static '/img/powerfullGymLogo-RedAndBlack-Full.png'%}" height="40px" width="auto" alt="Logo de Powerful Team">
       </a>
       
@@ -29,7 +31,7 @@
         </ul>
         <div class="col-md-3 text-end">
           <button type="button" class="btn btn-outline-primary me-2">Iniciar Sesión</button>
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop" >
             Sumarse!
           </button>
         </div>
