--- a/templates/gym/sing_up.html
+++ b/templates/gym/sing_up.html
@@ -12,6 +12,7 @@
       <div class="modal-body">
         <div class="col-md-12 ">
           <form class="row g-3 needs-validation" id="singup" novalidate>
+               {% csrf_token %}
               <div class="col-md-4">
                 <label for="validationCustom01" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="validationCustom01"  required>
