--- a/templates/administracion/tipo_de_actividad/editar.html
+++ b/templates/administracion/tipo_de_actividad/editar.html
@@ -13,8 +13,7 @@
 <div class="card">
     <div class="card-header">Editar tipos de actividad</div>
     <div class="card-body">
-        <!-- <form action="{% url 'tipo_de_actividad_editar' %}" method="post" enctype="multipart/form-data"> -->
-        <form action="" method="post" enctype="multipart/form-data"></form>
+        <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% include 'administracion/tipo_de_actividad/form.html' %}
         </form>
