busqueda parametrizada en index de tipos de actividades

--- a/templates/administracion/tipo_de_actividad/index.html
+++ b/templates/administracion/tipo_de_actividad/index.html
@@ -11,7 +11,9 @@
 
 
 <!-- Se harcodea el campo que se va a usar para el campo de busqueda (no implementado TO DO) -->
-<div class="card">
+
+{% include './buscar.html' %}
+<!-- <div class="card">
     <div class="card-header">
         <h3>Filtros</h3>
     </div>
@@ -35,7 +37,7 @@
             </div>
         </form>
     </div>
-</div>
+</div> -->
 <br>
 <div class="card">
     <div class="card-body">
