agegar link a contacto desde las actividades

--- a/templates/gym/actividades.html
+++ b/templates/gym/actividades.html
@@ -43,13 +43,14 @@
 
 <div class="container marketing">
     <!-- START THE FEATURETTES -->
-<!--     
-    <hr class="featurette-divider">
+    
+    <!-- <hr class="featurette-divider">
 
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
         <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        <p><a class="btn btn-lg btn-outline-primary" href="{% url 'contacto' %}">Conocer más</a></p>
       </div>
       <div class="col-md-5">
         <img src="{% static 'img/chica-nadando-500x500px-300ppi.jpg'%}" class="bd-placeholder-img bd-placeholder-img-lg img-fluid float-start mx-auto" width="500" height="500"  alt="...">
