--- a/templates/gym/header.html
+++ b/templates/gym/header.html
@@ -83,7 +83,7 @@
               </li>
             </ul>
             <div class="text-end">
-              <a type="button" class="btn btn-danger" href="{% url 'usuario' %}">Sumarse!</a>
+              <a type="button" class="btn btn-danger" href="{% url 'registrar_usuarios' %}">Sumarse!</a>
               </div>
             {% comment %} <div class="text-end">
             <button type="button"class="btn btn-danger"data-bs-toggle="modal"data-bs-target="#staticBackdrop">Sumarse!</button>
