--- a/templates/gym/header.html
+++ b/templates/gym/header.html
@@ -47,6 +47,26 @@
               >Contacto</a
             >
           </li>
+          {% if user.is_staff %}
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="{% url 'listar_usuarios' %}"
+              tabindex="-1"
+              aria-disabled="true"
+              >Lista de usuarios</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="{% url 'home_administracion' %}"
+              tabindex="-1"
+              aria-disabled="true"
+              >Administracion</a
+            >
+          </li>
+          {% endif%}
         </ul>
       </div>
       
