pasar tipos de actividad a vistas basadas en clases

--- a/templates/administracion/tipo_de_actividad/buscar.html
+++ b/templates/administracion/tipo_de_actividad/buscar.html
@@ -21,7 +21,7 @@ el nombre de la actividad para filtrar. Si no hay parametro que el index muestre
                 </div>
                 <div class="col-3 ">
                     <button class="btn btn-primary mt-4" type="submit">Buscar</button>
-                    <!-- <a name="" id="" class="btn btn-success" href="{% url 'tipo_de_actividad_index' %}" role="button"> <i class="fa-solid fa-circle-plus"></i>Buscar</a> -->
+                    <!-- <a name="" id="" class="btn btn-success" href="{% url 'tipo_de_actividad_index_view' %}" role="button"> <i class="fa-solid fa-circle-plus"></i>Buscar</a> -->
                 </div>
             </div>
         </form>
