--- a/templates/administracion/tipo_de_actividad/form.html
+++ b/templates/administracion/tipo_de_actividad/form.html
@@ -1,4 +1,4 @@
-{% for campo in formulario %}
+{% for campo in form %}
     <div class="form-group">
         <label for="">{{campo.label}}</label>
         {% comment %}
@@ -21,6 +21,6 @@
 <div class="row mt-3">
     <div class="col-12">
         <input type="submit" value="Guardar" class="btn btn-success">
-        <a href="{% url 'tipo_de_actividad_index' %}" class="btn btn-secondary">Cancelar</a>        
+        <a href="{% url 'tipo_de_actividad_index_view' %}" class="btn btn-secondary">Cancelar</a>        
     </div>
 </div>
