--- a/templates/administracion/tipo_de_actividad/nuevo.html
+++ b/templates/administracion/tipo_de_actividad/nuevo.html
@@ -13,7 +13,7 @@
 <div class="card">
     <div class="card-header">Creacion de tipos de actividad</div>
     <div class="card-body">
-        <form action="{% url 'tipo_de_actividad_nuevo' %}" method="post" enctype="multipart/form-data" novalidate>
+        <form action="{% url 'tipo_de_actividad_nuevo_view' %}" method="post" enctype="multipart/form-data" novalidate>
             {% csrf_token %}
             {% include 'administracion/tipo_de_actividad/form.html' %}
         </form>
