--- a/static/gym/css/navbar.css
+++ b/static/gym/css/navbar.css
@@ -1,3 +1,15 @@
 .modal-backdrop {
-    z-index: -1;
-  }
+  z-index: -1;
+}
+.mainContainer{
+  background-color: rgb(238, 218, 218);
+  height: 100vh;
+  
+  display: flex;
+  align-items: center;
+}
+.formularioP{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+} 
