--- a/templates/administracion/header_administracion.html
+++ b/templates/administracion/header_administracion.html
@@ -5,11 +5,9 @@
     <nav class="navbar navbar-expand-md fixed-top bg-white">
       <div class="container-fluid">
         
-        <a class="navbar-brand d-flex flex-column" href="{% url 'home_administracion' %}">
-          
+        <a class="navbar-brand d-flex flex-column"  href="{% url 'home' %}">
           <img src="{% static '/img/powerfullGymLogo-RedAndBlack-Full.png'%}" height="40px" width="auto" alt="Logo de Powerful Team">
         </a>
-        
         
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -28,7 +26,21 @@
             <li class="nav-item">
               <a class="nav-link" href= "#" tabindex="-1" aria-disabled="true">Clientes</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'listar_usuarios' %}" tabindex="-1" aria-disabled="true">Lista de usuarios</a>
+            </li>
           </ul>
+          <div class="dropdown text-end">
+            <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"aria-expanded="false" >
+              <img src="https://github.com/mdo.png" alt="mdo" width="50" class="rounded-circle"/></a>
+            <p>Hola {{user.username}}</p>
+            <ul class="dropdown-menu text-small">
+              <li><a class="dropdown-item" href="#">Perfil</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="{% url 'cerrar_sesion' %}">Cerrar Sesión</a >
+              </li>
+            </ul>
+          </div>
                    
         </div>
       </div>
