--- a/templates/gym/base.html
+++ b/templates/gym/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
+    
     <title>{% block title %}Gym{% endblock title %}</title>
 
     {% block headFonts %}
@@ -22,7 +22,8 @@
     <!--Favicon-->
     <!-- <link rel="shortcut icon" href="{% static '/img/PFBR.svg'%}" type="image/x-icon"> -->
     <link rel="shortcut icon" href="{% static '/img/Po.svg'%}" type="image/x-icon">
-
+    <link rel="stylesheet" href="{% static 'gym/css/navbar.css' %}" />
+    
 </head>
 
 
@@ -31,7 +32,7 @@
     {% block headerContent %}{% endblock headerContent %}
 <!-- BODY -->
 
-    <main>
+    <main class="main">
         {% block contenido %}{% endblock contenido %}
     </main>
     
