--- a/templates/gym/contact.html
+++ b/templates/gym/contact.html
@@ -4,15 +4,15 @@
 
 {% block headerContent %}
     {% include './header.html' %}
-    <link rel="stylesheet" href="{% static 'gym/css/contact.css' %}">
+    
 {% endblock headerContent %}
 
 {% block contenido %}
-<main class="container">
+<main class="mainContainer container">
 <div class="container col-md-6 mb-md-0 mb-6 ">
     <div class="row vh-auto justify-content-center ">
         <div class="rounded col-auto bg-light p-4">
-            <div class="contacto">
+            <div class="formularioP">
                 <p class="fs-4 fw-bold">Contacto</p>
                 <img src="{% static '/img/powerfullGymLogo-RedAndBlack-Full.png' %}" width=75 alt="logo">
             </div>
@@ -61,7 +61,10 @@
 </div>
 
 </div>
-</main>
+</main> 
 <script src={% static 'gym/js/sing_up.js' %}></script>
 {% endblock contenido %}
 
+{% block footerContent %}
+    {% include './footer.html' %}
+{% endblock footerContent %}
