--- a/templates/gym/header.html
+++ b/templates/gym/header.html
@@ -1,120 +1,67 @@
-<header>
+<header >
   {% load static %}
   <link rel="stylesheet" href="{% static 'gym/css/navbar.css' %}" />
-  <nav class="navbar navbar-expand-md fixed-top bg-white">
+  <nav class="navbar navbar-expand-md  fixed-top bg-white">
     <div class="container-fluid">
       <a class="navbar-brand d-flex flex-column" href="{% url 'home' %}">
         <img
           src="{% static '/img/powerfullGymLogo-RedAndBlack-Full.png'%}"
           height="40px"
           width="auto"
-          alt="Logo de Powerful Team"
-        />
-      </a>
+          alt="Logo de Powerful Team"/></a>
 
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarCollapse"
-        aria-controls="navbarCollapse"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse"
+        aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0 mx-auto">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="{% url 'home' %}"
-              >Home</a
-            >
+            <a class="nav-link" aria-current="page" href="{% url 'home' %}">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'actividades' %}">Actividades</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"
-              >Conocenos</a
-            >
+            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Conocenos</a>
           </li>
           <li class="nav-item">
-            <a
-              class="nav-link"
-              href="{% url 'contacto' %}"
-              tabindex="-1"
-              aria-disabled="true"
-              >Contacto</a
-            >
+            <a class="nav-link" href="{% url 'contacto' %}" tabindex="-1" aria-disabled="true">Contacto</a>
           </li>
+
           {% if user.is_staff %}
           <li class="nav-item">
-            <a
-              class="nav-link"
-              href="{% url 'listar_usuarios' %}"
-              tabindex="-1"
-              aria-disabled="true"
-              >Lista de usuarios</a
-            >
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="{% url 'home_administracion' %}"
-              tabindex="-1"
-              aria-disabled="true"
-              >Administracion</a
-            >
+            <a class="nav-link" href="{% url 'tipo_de_actividad_index_view' %}" tabindex="-1" aria-disabled="true">Administracion</a>
           </li>
           {% endif%}
         </ul>
       </div>
+
+      {% if user.is_authenticated %}
+      <div class="dropdown text-end">
+        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"aria-expanded="false" >
+          <img src="https://github.com/mdo.png" alt="mdo" width="50" class="rounded-circle"/></a>
+        <p>Hola {{user.username}}</p>
+        <ul class="dropdown-menu text-small">
+          <li><a class="dropdown-item" href="#">Perfil</a></li>
+          <li><hr class="dropdown-divider" /></li>
+          <li><a class="dropdown-item" href="{% url 'cerrar_sesion' %}">Cerrar Sesión</a >
+          </li>
+        </ul>
+      </div>
       
-        {% if user.is_authenticated %}
-        <div class="dropdown text-end">
-          <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="https://github.com/mdo.png" alt="mdo" width="50" class="rounded-circle"/>
-          </a>
-          <p>Hola {{user.username}}</p>
-          <ul class="dropdown-menu text-small">
-            <li><a class="dropdown-item" href="#">Perfil</a></li>
-            <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="{% url 'cerrar_sesion'%}">Cerrar Sesión</a></li>
-          </ul>
-        </div>
-          {% else %}
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                {% comment %} <form class="form-inline ml-auto" action="" method="POST">
-                  <li class="nav-item">
-                    <input type="usuario" class="form-control" name="usuario" placeholder="usuario"/>
-                  </li>
-                  <li class="nav-item">
-                    <div class="text-end">
-                    <input type="password" class="form-control"  name="password" placeholder="Contraseña" />
-                    </div>
-                  </li>
-                  <div class="text-end">
-                  <button type="submit" class="btn btn-danger mr-3">Iniciar Sesión</button>
-                  </div>
-                </form> {% endcomment %}
-                <a type="button" class="btn btn-danger" href="{% url 'loguear' %}">Iniciar Sesion</a>
-              </li>
-            </ul>
-            <div class="text-end">
-              <a type="button" class="btn btn-danger" href="{% url 'registrar_usuarios' %}">Sumarse!</a>
-              </div>
-            {% comment %} <div class="text-end">
-            <button type="button"class="btn btn-danger"data-bs-toggle="modal"data-bs-target="#staticBackdrop">Sumarse!</button>
-            </div> {% endcomment %}
-          </div>
-          {% endif%}
-          
-        
-      
-      
-      {% include 'usuario/sign_up.html' %}
+      {% else %}
+      <div class="col-md-3 text-end" id="navbarCollapse">
+        <button type="button" class="btn btn-danger" id="login" data-bs-toggle="modal"
+        data-bs-target="#loginModal" >Iniciar Sesion</button>
+        <button type="button" class="btn btn-danger" id="registro" data-bs-toggle="modal"
+        data-bs-target="#registroModal">¡Sumarse!</button>
+      </div>
+      {% endif %}
+
+      {% include 'usuario/registrar_usuario.html' %}
+      {% include 'usuario/login.html' %}
     </div>
   </nav>
 </header>
