--- a/templates/gym/home.html
+++ b/templates/gym/home.html
@@ -31,7 +31,8 @@
 {% endblock headerContent %}
 
 {% block contenido %}
-<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+
+<div id="myCarousel" class="carousel slide mainContainer" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -46,7 +47,7 @@
           <div class="carousel-caption text-start">
             <h1>Palestra.</h1>
             <p>Entrenamiento de escalada en una pared de 8m de altura.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Conocer más</a></p>
+            <p><a class="btn btn-lg btn-primary" href="{% url 'actividades' %}">Conocer más</a></p>
           </div>
         </div>
       </div>
@@ -67,7 +68,7 @@
           <div class="carousel-caption text-start">
             <h1>Aparatos.</h1>
             <p>Un entrenador te guiará para ayudarte con tus objetivos.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Conocer más</a></p>
+            <p><a class="btn btn-lg btn-primary" href="{% url 'actividades' %}">Conocer más</a></p>
           </div>
         </div>
       </div>
