--- a/templates/usuario/login.html
+++ b/templates/usuario/login.html
@@ -1,23 +1,56 @@
 {% extends 'gym/base.html' %}
+{% load static %} 
 {% block title %}{{title}}{% endblock title %}
 
 {% block contenido %}
-<form action="" method="POST">
-     {% csrf_token %} 
-     {% if messages %}
 
-     {% for message in messages%}
-     
-     <span class="alert alert-{{message.tags}}">{{message}}</span> 
-     {% endfor %}
+<div class="modal " id="loginModal"  tabindex="-1" aria-labelledby="loginModalLabel" role="document"aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header d-flex justify-content-between">
+                <div class="login">
+                    <h1 class="modal-title fs-5" id="loginModalLabel">Logueate!</h1>
+                </div>
+                <div class="d-flex align-items-center">
+                    <img src="{% static '/img/powerfullGymLogo-RedAndBlack-Full.png' %}" width="75" alt="logo">
+                </div>
+            </div>
+            
+            <div class="modal-body">
+                <form class="row g-3 needs-validation" action="{% url 'loguear' %}" method="POST" novalidate>
+                    {% csrf_token %}
+                    {% if messages %}
+                        {% for message in messages%}
+                        <span class="alert alert-{{message.tags}}">{{message}}</span>
+                        {% endfor %}
+                    {% endif %}
+            
+                    <div class="col-md-12">
+                        <label for="username" class="form-label">Usuario</label>
+                        <div class="input-group has-validation">
+                            <span class="input-group-text" id="inputGroupPrepend">@</span>
+                            <input type="text" class="form-control" id="username" name="username" value="{{ form.username.value | default:'' }}"
+                            aria-describedby="inputGroupPrepend" placeholder="Ingrese su usuario" required />
+                            <div class="invalid-feedback"> Por favor, elija un nombre de usuario</div>
+                        </div>
+                        <div class="error">{{form.username.errors}}</div>
+                    </div>
 
-     {% endif %}
-     <br>
-     {{form.as_p}}
+                    <div class="col-md-12">
+                        <label for="password1"  class="form-label" >Contraseña</label>
+                        <input type="password" id="password" name="password" value="{{ form.password.value | default:'' }}"
+                        class="form-control" placeholder="Ingrese su contraseña" required/>
+                        <div class="error">{{form.password1.errors}}</div>
+                    </div>
 
-    <button type="submit" class="btn btn-danger"> Loguearse </button>
-
-</form>
-<div class="modal fade" id="login" role="dialog">
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-danger">Loguearse</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
+<script src={% static 'gym/js/sing_up.js' %}></script>
 {% endblock contenido %}
