--- a/templates/gym/actividades.html
+++ b/templates/gym/actividades.html
@@ -24,12 +24,12 @@
 {% block headStaticContent %}
     {% load static %}
     <!-- <link href="{% static '/gym/css/home.css' %}" rel="stylesheet"> -->
-    <link rel="stylesheet" href="{% static '/gym/css/home.css' %}"/>
+    <link rel="stylesheet" href="{% static '/gym/css/actividades.css' %}"/>
 {% endblock headStaticContent %}
 
 {% load static %}
     <!-- <link href="{% static '/gym/css/home.css' %}" rel="stylesheet"> -->
-    <link rel="stylesheet" href="{% static '/gym/css/home.css' %}"/>
+    <!-- <link rel="stylesheet" href="{% static '/gym/css/home.css' %}"/> -->
 
 <!-- BODY -->
 {% block headerContent %}
