--- a/static/gym/css/navbar.css
+++ b/static/gym/css/navbar.css
@@ -1,13 +1,13 @@
 .modal-backdrop {
   z-index: -1;
 }
-.mainContainer{
+/* .mainContainer{
   background-color: rgb(238, 218, 218);
   height: 100vh;
   
   display: flex;
   align-items: center;
-}
+} */
 .formularioP{
   display: flex;
   flex-direction: row;
