mejorar visualizacion admnistracion

--- a/templates/administracion/home_administracion.html
+++ b/templates/administracion/home_administracion.html
@@ -1,4 +1,4 @@
 {% extends 'administracion/base_administracion.html' %}
 {% block title %}{{title}}{% endblock title %}
 {% load static %}
-<link href="{% static '/gym/css/home.css'%}" rel="stylesheet">
+<link href="{% static '/administracion/css/administracion.css'%}" rel="stylesheet">
