--- a/templates/administracion/base_administracion.html
+++ b/templates/administracion/base_administracion.html
@@ -21,7 +21,7 @@
      <!--Favicon-->
     <link rel="shortcut icon" href="{% static '/img/Po.svg'%}" type="image/x-icon">
     
-    <!-- <link href="{% static '/administracion/css/styles.css'%}" rel="stylesheet" /> -->
+    <link href="{% static '/administracion/css/administracion.css'%}" rel="stylesheet" />
 </head>
 
 <!-- <body class="sb-nav-fixed"> -->
@@ -36,7 +36,7 @@
         </div>
     </main>
     <br>
-    <footer class="py-4 bg-danger mt-auto">
+    <footer class="py-4 bg-danger mt-auto footer fixed-bottom">
         <div class="container-fluid px-4">
             <div class="d-flex align-items-center justify-content-between small">
                 <div class="text-white">Copyright &copy; PowerFull 2023</div>
