--- a/templates/administracion/header_administracion.html
+++ b/templates/administracion/header_administracion.html
@@ -1,4 +1,3 @@
-
 <header >
     {% load static %}
     <!-- <link rel="stylesheet" href="{% static 'gym/css/navbar.css' %}">  -->
@@ -15,13 +14,16 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0 mx-auto">
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'home_administracion' %}">Home</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{% url 'tipo_de_actividad_index_view' %}">Tipos de Actividad</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Actividades</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Profesores</a>
+              <a class="nav-link" href="{% url 'profesor_index_view' %}">Profesores</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href= "#" tabindex="-1" aria-disabled="true">Clientes</a>
