--- a/templates/administracion/cliente/eliminar.html
+++ b/templates/administracion/cliente/eliminar.html
@@ -1,21 +1,21 @@
 {% extends '../base_administracion.html' %}
 
-{% block titulo %}Eliminar profesor{% endblock%}
+{% block titulo %}Eliminar cliente{% endblock%}
 
 {% block contenido %}
-<h1 class="mt-4">Profesores</h1>
+<h1 class="mt-4">Clientes</h1>
 <ol class="breadcrumb mb-4">
     <li class="breadcrumb-item"><a href="{% url 'home_administracion' %}">Administracion</a></li>
-    <li class="breadcrumb-item active">Eliminar profesor</li>
+    <li class="breadcrumb-item active">Eliminar cliente</li>
 </ol>
 
 
 <div class="card">
-    <div class="card-header">Eliminación de profesor</div>
+    <div class="card-header">Eliminación de cliente</div>
     <div class="card-body">
         <form method="post">
             {% csrf_token %}
-            <p>Está seguro que quiere eliminar el profesor "{{ object.apellido }} {{object.nombre}}"?</p>
+            <p>Está seguro que quiere eliminar el cliente "{{ object.apellido }} {{object.nombre}}"?</p>
             <input type="submit" value="Confirmar" class="btn btn-danger">
         </form>
         
