--- a/templates/administracion/header_administracion.html
+++ b/templates/administracion/header_administracion.html
@@ -31,6 +31,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'listar_usuarios' %}" tabindex="-1" aria-disabled="true">Lista de usuarios</a>
             </li>
+            <li class="nav-item">
+               <a class="nav-link" href="{% url 'admin:index' %}" tabindex="-1" aria-disabled="true">Admin</a>
+            </li>
           </ul>
           <div class="dropdown text-end">
             <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"aria-expanded="false" >
