--- a/templates/gym/header.html
+++ b/templates/gym/header.html
@@ -46,6 +46,8 @@
         <ul class="dropdown-menu text-small">
           <li><a class="dropdown-item" href="#">Perfil</a></li>
           <li><hr class="dropdown-divider" /></li>
+          <li><a class="dropdown-item" href="{% url 'cambiar_password' %}">Cambiar Contraseña</a></li>
+          <li><hr class="dropdown-divider" /></li>
           <li><a class="dropdown-item" href="{% url 'cerrar_sesion' %}">Cerrar Sesión</a >
           </li>
         </ul>
