--- a/templates/administracion/cliente/eliminar.html
+++ b/templates/administracion/cliente/eliminar.html
@@ -5,7 +5,7 @@
 {% block contenido %}
 <h1 class="mt-4">Clientes</h1>
 <ol class="breadcrumb mb-4">
-    <li class="breadcrumb-item"><a href="{% url 'home_administracion' %}">Administracion</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'home_administracion' %}">Administración</a></li>
     <li class="breadcrumb-item active">Eliminar cliente</li>
 </ol>
 
