--- a/templates/administracion/header_administracion.html
+++ b/templates/administracion/header_administracion.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="{% url 'profesor_index_view' %}">Profesores</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href= "#" tabindex="-1" aria-disabled="true">Clientes</a>
+              <a class="nav-link" href= "{% url 'cliente_index_view' %}" tabindex="-1" aria-disabled="true">Clientes</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'listar_usuarios' %}" tabindex="-1" aria-disabled="true">Lista de usuarios</a>
@@ -34,6 +34,9 @@
             <li class="nav-item">
                <a class="nav-link" href="{% url 'admin:index' %}" tabindex="-1" aria-disabled="true">Admin</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'gymadmin:index' %}" tabindex="-1" aria-disabled="true">Admin</a>
+           </li>
           </ul>
           <div class="dropdown text-end">
             <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"aria-expanded="false" >
