Correcciones y mejoras varias en usuario

--- a/templates/administracion/header_administracion.html
+++ b/templates/administracion/header_administracion.html
@@ -37,10 +37,15 @@
           </ul>
           <div class="dropdown text-end">
             <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"aria-expanded="false" >
-              <img src="https://github.com/mdo.png" alt="mdo" width="50" class="rounded-circle"/></a>
+              {% if user.imagen %}
+                <img src="{{ user.imagen.url }}" alt="perfil" width="50" class="rounded-circle" id="user-image" />
+              {% else %}
+                <img src="{% static '/img/predeterminada.png' %}" alt="perfil" width="50" class="rounded-circle" id="user-image" />
+              {% endif %}
+           </a>
             <p>Hola {{user.username}}</p>
             <ul class="dropdown-menu text-small">
-              <li><a class="dropdown-item" href="#">Perfil</a></li>
+              <li><a class="dropdown-item" href="{% url 'perfil_usuario' user.id %}">Perfil</a></li>
               <li><hr class="dropdown-divider" /></li>
               <li><a class="dropdown-item" href="{% url 'cerrar_sesion' %}">Cerrar Sesión</a >
               </li>
