--- a/templates/gym/contact.html
+++ b/templates/gym/contact.html
@@ -14,7 +14,7 @@
 {% endblock headerContent %}
 
 {% block contenido %}
-<main class="mainContainer container">
+<main class="mainContainer container-fluid ">
 <!-- <main class="container"> -->
 <div class="container col-md-6 mb-md-0 mb-6 ">
     <div class="row vh-auto justify-content-center ">
@@ -69,7 +69,7 @@
 
 </div>
 </main> 
-<script src="{% static 'gym/js/sing_up.js' %}"></script>
+<script src="{% static 'gym/js/sign_up.js' %}"></script>
 {% endblock contenido %}
 
 {% block footerContent %}
