--- a/templates/usuario/editar_usuario.html
+++ b/templates/usuario/editar_usuario.html
@@ -64,25 +64,6 @@
               <div class="valid-feedback">Correcto!</div>
               <div class="error">{{form.email.errors}}</div>
             </div>
-
-            <div class="col-md-6">
-              <label class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password1" name="password1" value="{{ form.password1.value | default:'' }}"
-                 oninput="verificarFortaleza()" placeholder="Ingrese su contraseña" required/>
-                <span class="verificarPass"> 
-                  <p id="mensajePass"></p>
-                </span>
-              <div class="invalid-feedback">Por favor, ingrese una contraseña, el campo no puede estar vacío</div>
-              <div class="error">{{form.password1.errors}}</div>
-            </div>
-           
-            <div class="col-md-6">
-              <label class="form-label">Repita la contraseña</label>
-                <input type="password" id="password2" name="password2" value="{{ form.password2.value | default:'' }}"
-                 class="form-control" placeholder="Reingrese su contraseña" required/>
-                <div class="invalid-feedback">Por favor, reingrese su contraseña, el campo no puede estar vacío</div>
-              <div class="error">{{form.password2.errors}}</div>
-            </div> 
             <div class="modal-footer">
                 <a class="btn btn-secondary" href="{% url 'listar_usuarios' %}" >Cancelar</a>
               <button type="submit" class="btn btn-danger">Confirmar</button>
@@ -90,5 +71,5 @@
           </form>
         </div>
         </div>
-  <script src={% static 'gym/js/sing_up.js' %}></script>
+  <script src={% static 'gym/js/sign_up.js' %}></script>
 {% endblock contenido %}
