--- a/static/gym/css/contact.css
+++ b/static/gym/css/contact.css
@@ -12,7 +12,7 @@ h1 {
   }
 
   .mainContainer{
-    background-color: rgb(238, 218, 218);
+    background-color: rgb(103 92 117 / 30%);
     height: calc( 100vh - 11.5rem);
     position: relative;
     display: flex;
