--- a/templates/gym/footer.html
+++ b/templates/gym/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer d-flex flex-wrap justify-content-between align-items-center p-4 bg-danger">
+<footer class="fixed-bottom footer d-flex flex-wrap justify-content-between align-items-center p-4 bg-danger">
   <div class="col-md-4 d-flex align-items-center">
     <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
       <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
