--- a/templates/gym/header.html
+++ b/templates/gym/header.html
@@ -2,7 +2,7 @@
   {% load static %}
   <link rel="stylesheet" href="{% static 'gym/css/navbar.css' %}" />
   <nav class="navbar navbar-expand-md  fixed-top bg-white">
-    <div class="container-fluid">
+    <div class="container-fluid px-5">
       <a class="navbar-brand d-flex flex-column" href="{% url 'home' %}">
         <img
           src="{% static '/img/powerfullGymLogo-RedAndBlack-Full.png'%}"
@@ -41,15 +41,17 @@
       {% if user.is_authenticated %}
       <div class="dropdown text-end">
         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"aria-expanded="false" >
-          <img src="https://github.com/mdo.png" alt="mdo" width="50" class="rounded-circle"/></a>
+                {% if user.imagen %}
+                  <img src="{{ user.imagen.url }}" name="imagen" alt="perfil" width="50" class="rounded-circle" id="user-image" />
+                {% else %}
+                  <img src="{% static '/img/predeterminada.png' %}" alt="perfil" width="50" class="rounded-circle" id="user-image" />
+                {% endif %}
+        </a>
         <p>Hola {{user.username}}</p>
-        <ul class="dropdown-menu text-small">
-          <li><a class="dropdown-item" href="#">Perfil</a></li>
+        <ul class="dropdown-menu text-small w-auto">
+          <li><a class="dropdown-item text-nowrap" href="{% url 'perfil_usuario' user.id %}">Perfil</a></li>
           <li><hr class="dropdown-divider" /></li>
-          <li><a class="dropdown-item" href="{% url 'cambiar_password' %}">Cambiar Contraseña</a></li>
-          <li><hr class="dropdown-divider" /></li>
-          <li><a class="dropdown-item" href="{% url 'cerrar_sesion' %}">Cerrar Sesión</a >
-          </li>
+          <li><a class="dropdown-item text-nowrap" href="{% url 'cerrar_sesion' %}">Cerrar Sesión</a ></li>
         </ul>
       </div>
       
