--- a/templates/usuario/login.html
+++ b/templates/usuario/login.html
@@ -19,19 +19,22 @@
             <div class="modal-body">
                 <form class="row g-3 needs-validation" action="{% url 'loguear' %}" method="POST" novalidate>
                     {% csrf_token %}
-                    {% if messages %}
-                        {% for message in messages%}
-                        <span class="alert alert-{{message.tags}}">{{message}}</span>
+                    {% if form.errors %}
+                    <div class="alert alert-danger">
+                        {% for field in form %}
+                            {% for error in field.errors %}
+                                <p>{{ error }}</p>
+                            {% endfor %}
                         {% endfor %}
-                    {% endif %}
-            
+                    </div>
+                      {% endif %}
                     <div class="col-md-12">
                         <label for="username" class="form-label">Usuario</label>
                         <div class="input-group has-validation">
                             <span class="input-group-text" id="inputGroupPrepend">@</span>
                             <input type="text" class="form-control" id="username" name="username" value="{{ form.username.value | default:'' }}"
                             aria-describedby="inputGroupPrepend" placeholder="Ingrese su usuario" required />
-                            <div class="invalid-feedback"> Por favor, elija un nombre de usuario</div>
+                            <div class="invalid-feedback"> Por favor, ingrese su usuario</div>
                         </div>
                         <div class="error">{{form.username.errors}}</div>
                     </div>
@@ -52,5 +55,5 @@
         </div>
     </div>
 </div>
-<script src={% static 'gym/js/sing_up.js' %}></script>
+<script src="{% static 'gym/js/sign_up.js' %}"></script>
 {% endblock contenido %}
