actualizacion de app

--- a/templates/administracion/profesor/eliminar.html
+++ b/templates/administracion/profesor/eliminar.html
@@ -3,7 +3,7 @@
 {% block titulo %}Eliminar profesor{% endblock%}
 
 {% block contenido %}
-<h1 class="mt-4">Tipos de actividad</h1>
+<h1 class="mt-4">Profesores</h1>
 <ol class="breadcrumb mb-4">
     <li class="breadcrumb-item"><a href="{% url 'home_administracion' %}">Administracion</a></li>
     <li class="breadcrumb-item active">Eliminar profesor</li>
