--- a/templates/administracion/cliente/index.html
+++ b/templates/administracion/cliente/index.html
@@ -1,43 +1,18 @@
 {% extends '../base_administracion.html' %}
 
-{% block titulo %}Profesor{% endblock%}
+{% block titulo %}Clientes{% endblock%}
 
 {% block contenido %}
 <br><br><br>
-<h1 class="mt-4">Profesor</h1>
+<h1 class="mt-4">Clientes</h1>
 
 <!-- Se harcodea el campo que se va a usar para el campo de busqueda (no implementado TO DO) -->
 
 {% include './buscar.html' %}
-<!-- <div class="card">
-    <div class="card-header">
-        <h3>Filtros</h3>
-    </div>
-    <div class="card-body">
-        <form action="">
-            <div class="row">
-                <div class="col-3">
-                    <div class="md-form mb-0">
-                        <label for="name" class="">Nombre</label>
-                        
-                        <input type="text" 
-                              id="nombre" 
-                              name="nombre"
-                              placeholder="Ingrese el nombre" 
-                              class="form-control">
-                    </div>
-                </div>
-                <div class="col-3 ">
-                    <button class="btn btn-primary mt-4">Buscar</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div> -->
 <br>
 <div class="card">
     <div class="card-body">
-        <a name="" id="" class="btn btn-success" href="{% url 'profesor_nuevo_view' %}" role="button"> <i class="fa-solid fa-circle-plus"></i>Nuevo</a>
+        <a name="" id="" class="btn btn-success" href="{% url 'cliente_nuevo_view' %}" role="button"> <i class="fa-solid fa-circle-plus"></i>Nuevo</a>
         <!-- bs5-table-defaul -->
         <table class="table">
          <!-- class="table"> -->
@@ -50,14 +25,14 @@
                 </tr>
             </thead>
             <tbody>
-                {% for profesor in qs_profesor %}
+                {% for cliente in qs_cliente %}
                     <tr>
-                        <td>{{profesor.id}}</td>
-                        <td>{{profesor.apellido}}</td>
-                        <td>{{profesor.nombre}}</td>
+                        <td>{{cliente.id}}</td>
+                        <td>{{cliente.apellido}}</td>
+                        <td>{{cliente.nombre}}</td>
                         <td>
-                            <a href="{% url 'profesor_editar_view' profesor.id %}" title="Editar" class="btn btn-warning">Editar<i class="fas fa-pencil"></i></a>
-                            <a href="{% url 'profesor_eliminar_view' profesor.id %}" title="Eliminar" class="btn btn-danger">Eliminar<i class="fas fa-trash"></i></a>
+                            <a href="{% url 'cliente_editar_view' cliente.id %}" title="Editar" class="btn btn-warning">Editar<i class="fas fa-pencil"></i></a>
+                            <a href="{% url 'cliente_eliminar_view' cliente.id %}" title="Eliminar" class="btn btn-danger">Eliminar<i class="fas fa-trash"></i></a>
                         </td>
                     </tr>
                 {% endfor %}
