--- a/templates/usuario/perfil_usuario.html
+++ b/templates/usuario/perfil_usuario.html
@@ -32,10 +32,10 @@
         
         
         <div class= "d-flex justify-content-between my-2 ">
-          <button type="button" class="btn btn-success col-6" id="contrasenia" data-bs-toggle="modal"
+          <button type="button" class="btn btn-success col-12" id="contrasenia" data-bs-toggle="modal"
           data-bs-target="#cambiarContraseñaModal" >Cambiar contraseña</button>
-          <button type="button" class="btn btn-danger col-6" id="eliminarCuenta" data-bs-toggle="modal"
-          data-bs-target="#eliminarCuentaModal" >Eliminar cuenta</button>
+          {% comment %} <button type="button" class="btn btn-danger col-6" id="eliminarCuenta" data-bs-toggle="modal"
+          data-bs-target="#eliminarCuentaModal" >Eliminar cuenta</button> {% endcomment %}
         </div>
         
     
