--- a/templates/administracion/header_administracion.html
+++ b/templates/administracion/header_administracion.html
@@ -1,4 +1,4 @@
-<header >
+<header>
     {% load static %}
     <!-- <link rel="stylesheet" href="{% static 'gym/css/navbar.css' %}">  -->
     <nav class="navbar navbar-expand-md fixed-top bg-white">
@@ -14,7 +14,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0 mx-auto">
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'home_administracion' %}">Home</a>
+              <a class="nav-link" href="{% url 'home' %}">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'tipo_de_actividad_index_view' %}">Tipos de Actividad</a>
