--- a/templates/usuario/registrar_usuario.html
+++ b/templates/usuario/registrar_usuario.html
@@ -87,14 +87,13 @@
                 <div class="invalid-feedback">Por favor, reingrese su contraseña, el campo no puede estar vacío</div>
               <div class="error">{{form.password2.errors}}</div>
             </div>
-
-            <div class="col-12">
-              <div class="form-check">
+            
+               <div class="form-check col-12">
                 <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required />
-                <label class="form-check-label" for="invalidCheck">Acepto los términos y condiciones</label>
+                <label class="form-check-label" for="invalidCheck">Acepto los términos y condiciones</label>         
                 <div class="invalid-feedback"> Debe aceptar las condiciones para registrarse</div>
-              </div>
-            </div>
+              </div> 
+              
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
               <button type="submit" class="btn btn-danger">Registrarse</button>
