quitar filtro de mensajes

--- a/templates/administracion/mensajes_contacto/listar_mensajes.html
+++ b/templates/administracion/mensajes_contacto/listar_mensajes.html
@@ -5,9 +5,9 @@
 {% block contenido %}
 
 <h1 class="mt-4">Lista de mensajes</h1>
-<div class="card">
-{% include 'administracion/mensajes_contacto/buscar_mensaje.html' %}
-</div>
+<!-- <div class="card"> -->
+<!-- {% include 'administracion/mensajes_contacto/buscar_mensaje.html' %} -->
+<!-- </div> -->
 <br>
 {% if object_list %}
 
